address review comments: extract common code, fix tests